--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="content">
-                    <h1 class="js-tilt" id="hi">Hi.</h1>
+                    <h1 class="js-tilt on-scroll" id="hi">Hi.</h1>
                     <p>
                         My name is Lukas.<br />
                         I design friendly & tangible web/app experiences,<br />
@@ -50,7 +50,7 @@
                             <p class="nospace nowrap subtle">I think gradients are cool.</p>
                         </div>
 
-                        <div class="col-xs">
+                        <div class="col-xs on-scroll">
                             <a data-scroll href="#about"><button id="scroll-down" class="ui-button pink-red">Scroll Down</button></a>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
 
                     <div class="padding dark-back col-sm-6">
                         <h1 class="yellow">Who Am I</h1>
-                        <p class="large dim">I am a <span class="bright">computer science student</span> at <span class="bright">Carleton University</span>, completing a <span class="bright">BCS degree</span> through a <span class="bright">partnership</span> with Carleton University and <span class="bright">Shopify.</span></p>
+                        <p class="large dim on-scroll">I am a <span class="bright">computer science student</span> at <span class="bright">Carleton University</span>, completing a <span class="bright">BCS degree</span> through a <span class="bright">partnership</span> with Carleton University and <span class="bright">Shopify.</span></p>
 
 
                         <p class="dim">Want to know what that means?  Check out <a href="https://www.shopify.ca/education/bcs" target="_blank">shopify.ca/education/bcs</a>.</p>
@@ -73,8 +73,8 @@
                         <div class="space big"></div>
 
                         <div class="row around-xs middle-xs center-xs">
-                            <div class="col-sm"><img src="./assets/img/shopify.png" alt="Shopify - Logo"></div>
-                            <div class="col-sm"><img src="./assets/img/carleton.png" alt="Carleton - Logo"></div>
+                            <div class="col-sm on-scroll"><img src="./assets/img/shopify.png" alt="Shopify - Logo"></div>
+                            <div class="col-sm on-scroll"><img src="./assets/img/carleton.png" alt="Carleton - Logo"></div>
                         </div>
 
                         <hr />
@@ -92,12 +92,12 @@
                 <div class="space"></div>
 
                 <div class="row around-xs middle-xs">
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 on-scroll">
                         <img src="./assets/img/webdev/otowa.png" class="box">
                     </div>
 
                     <div class="col-sm-5 fe-desc-right">
-                        <h1 class="red-emphasis xl">01</h1>
+                        <h1 class="red-emphasis xl on-scroll">01</h1>
                         <p class="bold">OTO-WA TAIKO</p>
 
                         <p>Oto-Wa Taiko is a Japanese drumming group in Ottawa, Ontario.  This is a dynamic website, created using AngularJS and navigation based on UI-Router.  The site also uses Firebase to manage content, and user accounts for members of the group.  The site features a friendly design which suits the desired aesthetic of the art form and brand.</p>
@@ -109,12 +109,12 @@
                 <div class="space"></div>
 
                 <div class="row around-xs middle-xs reverse">
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 on-scroll">
                         <img src="./assets/img/webdev/humanlib.png" class="box">
                     </div>
 
                     <div class="col-sm-5 fe-desc-left">
-                        <h1 class="yellow-emphasis xl">02</h1>
+                        <h1 class="yellow-emphasis xl on-scroll">02</h1>
                         <p class="bold">SWL & CB HUMAN LIBRARY</p>
 
                         <p>This website was created for a "human library" event co-organized by two schools in Ottawa.  The website hosts biographies of many human books for students to read.  This gateway was originally static, but was later converted to a full Wordpress installation using custom loops and fields.  The site can now be easily edited using WYSIWYG functionality.</p>
@@ -126,12 +126,12 @@
                 <div class="space"></div>
 
                 <div class="row around-xs middle-xs">
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 on-scroll">
                         <img src="./assets/img/webdev/tedx.png" class="box">
                     </div>
 
                     <div class="col-sm-5 fe-desc-right">
-                        <h1 class="green-emphasis xl">03</h1>
+                        <h1 class="green-emphasis xl on-scroll">03</h1>
                         <p class="bold">TEDxYOUTH@OGILVIE RD</p>
 
                         <p>This site was created for a student-run TEDx conference.  Using a custom version of the Bootstrap frameworking system, the site offered easy to use and accessible content, while maintaining authentic TED branding.  The blog portion of the site ran on Wordpress to allow for easy editing by the executives.</p>
@@ -143,12 +143,12 @@
                 <div class="space"></div>
 
                 <div class="row around-xs middle-xs reverse">
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 on-scroll">
                         <img src="./assets/img/webdev/cblibrary.png" class="box">
                     </div>
 
                     <div class="col-sm-5 fe-desc-left">
-                        <h1 class="red-emphasis xl">04</h1>
+                        <h1 class="red-emphasis xl on-scroll">04</h1>
                         <p class="bold">COLONEL BY H.S. LIBRARY <span class="dim light italic">contributed</span></p>
 
                         <p>The Colonel By library website is used by students as a gateway to useful educational resources.  This site is also based off of the Bootstrap framework, and offers a flexible layout solution to meet the needs of any type of content.</p>
@@ -160,12 +160,12 @@
                 <div class="space"></div>
 
                 <div class="row around-xs middle-xs">
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 on-scroll">
                         <img src="./assets/img/webdev/romsicki.png" class="box">
                     </div>
 
                     <div class="col-sm-5 fe-desc-right">
-                        <h1 class="yellow-emphasis xl">05</h1>
+                        <h1 class="yellow-emphasis xl on-scroll">05</h1>
                         <p class="bold">THIS WEBSITE</p>
 
                         <p>My homepage was raw, carefully hand-crafted HTML, CSS, and JS, using nothing but the FlexboxGrid CSS layout framework.  The original design saw numerous iterations over the past 7 years, and continues to be improved.  The design was carefully thought out and planned, with original ideas and unique colours and typefaces.</p>
@@ -179,10 +179,10 @@
                 <header class="black italic">Application <span class="red">Design</span></header>
 
                 <div class="row middle-xs">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 on-scroll">
                         <img src="./assets/img/software/impulse_iphone.png" />
                     </div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 on-scroll">
                         <h1 class="blue xl">01</h1>
                         <h1>Impulse</h1>
                         <aside>2D Physics Game</aside>
@@ -200,7 +200,7 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs">
-                    <div class="col-sm-6 col-video">
+                    <div class="col-sm-6 col-video on-scroll">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/5y1vGwhHW2s?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
@@ -223,7 +223,7 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs reverse">
-                    <div class="col-sm-6 col-video">
+                    <div class="col-sm-6 col-video on-scroll">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/hxqbvII832o?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
@@ -249,7 +249,7 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs">
-                    <div class="col-sm-5 col-video">
+                    <div class="col-sm-5 col-video on-scroll">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/videoseries?list=PL0WeV-SHK4yy2dkSG8xCWxl5mo5gfKhLw&color=white" frameborder="0" allowfullscreen></iframe>
                         </div>
@@ -274,7 +274,7 @@
                 <div class="space"></div>
 
                 <div class="row center-xs middle-xs reverse">
-                    <div class="col-sm-5 col-video">
+                    <div class="col-sm-5 col-video on-scroll">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/videoseries?list=PL0WeV-SHK4yxQEysjYEv446ZGolrs4FLz&color=white" frameborder="0" allowfullscreen></iframe>
                         </div>
@@ -300,14 +300,14 @@
 
                 <div class="space"></div>
 
-                <div class="row center-xs middle-xs reverse">
-                    <div class="col-sm-5 col-video">
+                <div class="row center-xs middle-xs">
+                    <div class="col-sm-5 col-video on-scroll">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/VS-Ow2dZzIE?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
-                    <div class="col-sm-5 c-desc-right">
+                    <div class="col-sm-5 c-desc-left">
                         <h1>POLSKA 2015</h1>
 
                         <p>
@@ -323,14 +323,14 @@
 
                 <div class="space"></div>
 
-                <div class="row center-xs middle-xs">
-                    <div class="col-sm-5 col-video">
+                <div class="row center-xs middle-xs reverse">
+                    <div class="col-sm-5 col-video on-scroll">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/5P7nmuWtpoI?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
-                    <div class="col-sm-5 c-desc-left">
+                    <div class="col-sm-5 c-desc-right">
                         <h1>TORONTO FROM THE 24TH FLOOR</h1>
 
                         <p>
@@ -346,14 +346,14 @@
 
                 <div class="space"></div>
 
-                <div class="row center-xs middle-xs reverse">
-                    <div class="col-sm-5 col-video">
+                <div class="row center-xs middle-xs">
+                    <div class="col-sm-5 col-video on-scroll">
                         <div class="intrinsic-container intrinsic-container-16x9">
                             <iframe src="https://www.youtube.com/embed/v_U1Z82OfjI?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
-                    <div class="col-sm-5 c-desc-right">
+                    <div class="col-sm-5 c-desc-left">
                         <h1>RAINY DAY</h1>
 
                         <p>
@@ -389,7 +389,7 @@
         </main>
 
         <script src="./js/jquery-3.2.1.min.js" type="text/javascript"></script>
-        <script src="./js/jquery.fitvids.js" type="text/javascript"></script>
+        <script src="./js/scrollreveal.min.js" type="text/javascript"></script>
         <script src="./vendor/prefixfree/prefixfree.min.js" type="text/javascript"></script>
         <script src="./vendor/tilt/tilt.jquery.min.js" type="text/javascript"></script>
         <script src="./vendor/smoothscroll/smooth-scroll.min.js"></script>
@@ -407,7 +407,8 @@
                     maxTilt: 2
                 });
 
-                $(".").fitVids();
+                window.sr = ScrollReveal();
+                sr.reveal('.on-scroll');
             });
         </script>
     </body>
