Correct layout & content, add temporary profile picture

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
             <section id="about">
                 <div class="row">
-                    <div class="padding dark-back col-sm-6" id="profile">
-                        <p class="dim">Image coming soon.</p>
+                    <div class="padding dark-back col-sm-6 center-xs" id="profile">
+                        <div id="profile-circle"></div>
                     </div>
 
                     <div class="padding dark-back col-sm-6">
@@ -199,9 +199,11 @@
                         <h1 class="yellow-emphasis xl on-scroll">05</h1>
                         <p class="bold">THIS WEBSITE</p>
 
-                        <p>My homepage was raw, carefully hand-crafted HTML, CSS, and JS, using nothing but the FlexboxGrid CSS layout framework.  The original design saw numerous iterations over the past 7 years, and continues to be improved.  The design was carefully thought out and planned, with original ideas and unique colours and typefaces.</p>
+                        <p>This website runs on carefully hand-crafted HTML, CSS, and JS, using nothing but the FlexboxGrid CSS layout framework.  The original design saw numerous iterations over the past 7 years, and continues to be improved.  The design was carefully thought out and planned, with original ideas and unique colours and typefaces.</p>
 
-                        <p><a href="http://romsicki.com">romsicki.com</a></p>
+                        <p><a href="http://romsicki.com">romsicki.com</a><br />
+                            <span class="small dim">Source tree available on <a href="http://https://github.com/lfroms/lukas-website-xenon">GitHub</a>.</span>
+                        </p>
                     </div>
                 </div>
             </section>
@@ -288,7 +290,7 @@
                     </div>
 
                     <div class="col-sm-5 c-desc-left">
-                        <img class="c-title" src="./assets/img/cine/hsh.png" />
+                        <img class="c-title" id="rtv" src="./assets/img/cine/hsh.png" />
 
                         <p>
                             <b>Role:</b> Editor, Cinematographer <span class="light italic">(Co-Host)</span><br />
