Fix issue where menu would not dim site

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     </head>
 
     <body>
+        
+        <div id="dim"></div>
+        
         <div id="loading">
             <div>
                 <div class="spinner">
