--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <p>This website runs on carefully hand-crafted HTML, CSS, and JS, using nothing but the FlexboxGrid CSS layout framework.  The original design saw numerous iterations over the past 7 years, and continues to be improved.  The design was carefully thought out and planned, with original ideas and unique colours and typefaces.</p>
 
                         <p><a href="http://romsicki.com">romsicki.com</a><br />
-                            <span class="small dim">Source tree available on <a href="http://https://github.com/lfroms/lukas-website-xenon">GitHub</a>.</span>
+                            <span class="small dim">Source tree available on <a href="https://github.com/lfroms/lukas-website-xenon">GitHub</a>.</span>
                         </p>
                     </div>
                 </div>
