Remove unecessary classes

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
             </section>
 
-            <section class="dark-back page-data" id="front-end">
+            <section class="dark-back" id="front-end">
                 <header class="white italic">Front End <span class="red">Design</span></header>
 
                 <div class="space"></div>
@@ -211,7 +211,7 @@
                 </div>
             </section>
 
-            <section class="page-data light-back" id="app-dev">
+            <section class="light-back" id="app-dev">
                 <header class="black italic">Application <span class="red">Design</span></header>
 
                 <div class="row middle-xs">
@@ -230,7 +230,7 @@
                 </div>
             </section>
 
-            <section class="page-data" id="cine">
+            <section class="dark-back" id="cine">
                 <header class="white italic">Cine / <span class="red">Digital Media</span></header>
 
                 <div class="space"></div>
