Update cine details

--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
 
                         <p>
                             <b>Role:</b> Editor, Cinematographer <span class="light italic">(Co-Host)</span><br />
-                            <b>Avg. Running Time:</b> 15:00 per segment <br />
+                            <b>Avg. Running Time:</b> 12:00 per segment <br />
+                            <b>Ep. Worked On:</b> 6 <br />
                             <b>Resolution:</b> 1080i
                         </p>
 
@@ -323,6 +324,7 @@
                         <p>
                             <b>Role:</b> Editor, Cinematographer, Presenter<br />
                             <b>Avg. Running Time:</b> 7:00 <br />
+                            <b>Ep. Worked On:</b> 37 <br />
                             <b>Resolution:</b> 1080p
                         </p>
 
