--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         </p>
 
                         <p class="light"><span class="regular italic">About CougarVision:</span><br />
-                            CougarVision is Colonel By Secondary School's internat television network, bringing students 6-10 minute daily episodes featuring announcements, shorts, and event coverage.  It is entirely student-run.
+                            CougarVision is Colonel By Secondary School's internal television network, bringing students 6-10 minute daily episodes featuring announcements, shorts, and event coverage.  It is entirely student-run.
                         </p>
                     </div>
                 </div>
