Compress page content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link href="./css/hamburgers.min.css" rel="stylesheet" type="text/css">
         <link href="./css/typeface.css" rel="stylesheet" type="text/css">
         <link href="./vendor/flexboxgrid/flexboxgrid.min.css" rel="stylesheet" type="text/css">
-        <link href="./vendor/normalize/normalize.css" rel="stylesheet" type="text/css">
+        <link href="./vendor/normalize/normalize.min.css" rel="stylesheet" type="text/css">
         <link href="./css/desktop.css" rel="stylesheet" type="text/css">
         <link href="./css/mobile.css" rel="stylesheet" type="text/css">
 
