Quick correction to new video

--- a/index.html
+++ b/index.html
@@ -417,11 +417,11 @@ display: block;
 					</div>
 
 					<div class="col-sm-5 c-desc-right">
-						<h1>Snow</h1>
+						<h1>SNOW</h1>
 
 						<p>
 							<b>Running Time:</b> 3:24 <br />
-							<b>Resolution:</b> 4K
+							<b>Resolution:</b> 1080p
 						</p>
 
 						<p class="light"><span class="regular italic">About:</span><br />
