Update Shopify education link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ display: block;
 						<p class="large dim on-scroll">I am a <span class="bright">computer science student</span> at <span class="bright">Carleton University</span>, completing a <span class="bright">BCS degree</span> through a <span class="bright">partnership</span> with Carleton University and <span class="bright">Shopify.</span></p>
 
 
-						<p class="dim">Want to know what that means?  Check out <a href="https://www.shopify.ca/education/bcs" target="_blank">shopify.ca/education/bcs</a>.</p>
+						<p class="dim">Want to know what that means?  Check out <a href="https://www.mydevlife.ca/" target="_blank">mydevlife.ca</a>.</p>
 
 						<div class="space big"></div>
 
