Add Dribbble link

--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@ display: block;
 						</p>
 					</div>
 				</div>
+
+				<div class="space"></div>
+
+				<div class="row center-xs middle-xs">
+					<div class="col-sm on-scroll">
+						Check out my conceptual designs on&nbsp;&nbsp;
+						<a data-scroll href="http://dribbble.com/lfroms"><button id="dribbble-open" class="ui-button pink-red">Dribbble</button></a>
+					</div>
+				</div>
 			</section>
 
 			<section class="light-back" id="app-dev">
@@ -303,7 +312,6 @@ display: block;
 						</p>
 
 						<p class="light"><span class="regular italic">About the show:</span><br />
-							<span class="regular">High School Happenings</span> is a monthly television programme on Rogers Television that features unique educational programs from a variety of high schools across Ottawa.  
 						</p>
 					</div>
 				</div>
