Replace missing description

--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ display: block;
 						</p>
 
 						<p class="light"><span class="regular italic">About the show:</span><br />
+							<span class="regular">High School Happenings</span> is a monthly television programme on Rogers Television that features unique educational programs from a variety of high schools across Ottawa.
 						</p>
 					</div>
 				</div>
