Update video portfolio

--- a/index.html
+++ b/index.html
@@ -296,12 +296,37 @@ display: block;
 				<div class="row center-xs middle-xs">
 					<div class="col-sm-5 col-video on-scroll">
 						<div class="intrinsic-container intrinsic-container-16x9">
+							<iframe src="https://www.youtube.com/embed/XTrPUArv5vQ?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
+						</div>
+					</div>
+
+					<div class="col-sm-5 c-desc-left">
+						<img class="c-title" id="rtv" src="./assets/img/cine/shopify_linked.png" />
+
+						<p>
+							<b>Type:</b> Promo <br />
+							<b>Role:</b> Director, Cinematographer, Editor <br />
+							<b>Running Time:</b> 3:39 <br />
+							<b>Resolution:</b> 1080p <span class="light italic">(4k downsampled)</span>
+						</p>
+
+						<p class="light"><span class="regular italic">About:</span><br />
+							<span class="regular">Linked</span> is an after-school Shopify Dev Discover program focused on teaching children the foundations of computational thinking and digital skills development.  This video was created in order to promote the program.
+						</p>
+					</div>
+				</div>
+
+				<div class="space"></div>
+
+				<div class="row center-xs middle-xs reverse">
+					<div class="col-sm-5 col-video on-scroll">
+						<div class="intrinsic-container intrinsic-container-16x9">
 							<iframe src="https://www.youtube.com/embed/videoseries?list=PL0WeV-SHK4yy2dkSG8xCWxl5mo5gfKhLw&color=white" frameborder="0" allowfullscreen></iframe>
 						</div>
 						<p class="light small smallspace">Youtube Playlist</p>
 					</div>
 
-					<div class="col-sm-5 c-desc-left">
+					<div class="col-sm-5 c-desc-right">
 						<img class="c-title" id="rtv" src="./assets/img/cine/hsh.png" />
 
 						<p>
@@ -317,33 +342,53 @@ display: block;
 					</div>
 				</div>
 
+				<header class="white italic">Personal / Experimental</header>
+
+				<div class="space"></div>
+
+				<div class="row center-xs middle-xs">
+					<div class="col-sm-5 col-video on-scroll">
+						<div class="intrinsic-container intrinsic-container-16x9">
+							<iframe src="https://www.youtube.com/embed/v_U1Z82OfjI?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
+						</div>
+					</div>
+
+					<div class="col-sm-5 c-desc-left">
+						<h1>RAINY DAY</h1>
+
+						<p>
+							<b>Running Time:</b> 3:31 <br />
+							<b>Resolution:</b> 1080p
+						</p>
+
+						<p class="light"><span class="regular italic">About:</span><br />
+							Shot using the Canon HV20 MiniDV camcorder at 50% zoom at PF24, on a rather rainy day, to the tune of "La Vie en Rose" performed by Louis Armstrong.
+						</p>
+					</div>
+				</div>
+
 				<div class="space"></div>
 
 				<div class="row center-xs middle-xs reverse">
 					<div class="col-sm-5 col-video on-scroll">
 						<div class="intrinsic-container intrinsic-container-16x9">
-							<iframe src="https://www.youtube.com/embed/videoseries?list=PL0WeV-SHK4yxQEysjYEv446ZGolrs4FLz&color=white" frameborder="0" allowfullscreen></iframe>
+							<iframe src="https://www.youtube.com/embed/EBb4_KaaGAA?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
 						</div>
-						<p class="light small smallspace">Youtube Playlist</p>
 					</div>
 
 					<div class="col-sm-5 c-desc-right">
-						<img class="c-title-large" src="./assets/img/cine/cv-logo.png" />
+						<h1>SNOW</h1>
 
 						<p>
-							<b>Role:</b> Editor, Cinematographer, Presenter<br />
-							<b>Avg. Running Time:</b> 7:00 <br />
-							<b>Ep. Worked On:</b> 37 <br />
+							<b>Running Time:</b> 3:24 <br />
 							<b>Resolution:</b> 1080p
 						</p>
 
-						<p class="light"><span class="regular italic">About CougarVision:</span><br />
-							CougarVision is Colonel By Secondary School's internal television network, bringing students 6-10 minute daily episodes featuring announcements, shorts, and event coverage.  It is entirely student-run.
+						<p class="light"><span class="regular italic">About:</span><br />
+							Trying out 240fps slow-motion video capabilities of the iPhone X, while capturing the magical snowfall in Ottawa.  Follow along for a trip from Shopify to Carleton U!
 						</p>
 					</div>
 				</div>
-
-				<header class="white italic">Personal / Experimental</header>
 
 				<div class="space"></div>
 
@@ -392,52 +437,6 @@ display: block;
 				</div>
 
 				<div class="space"></div>
-
-				<div class="row center-xs middle-xs">
-					<div class="col-sm-5 col-video on-scroll">
-						<div class="intrinsic-container intrinsic-container-16x9">
-							<iframe src="https://www.youtube.com/embed/v_U1Z82OfjI?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
-						</div>
-					</div>
-
-					<div class="col-sm-5 c-desc-left">
-						<h1>RAINY DAY</h1>
-
-						<p>
-							<b>Running Time:</b> 3:31 <br />
-							<b>Resolution:</b> 1080p
-						</p>
-
-						<p class="light"><span class="regular italic">About:</span><br />
-							Shot using the Canon HV20 MiniDV camcorder at 50% zoom at PF24, on a rather rainy day, to the tune of "La Vie en Rose" performed by Louis Armstrong.
-						</p>
-					</div>
-				</div>
-
-				<div class="space"></div>
-
-				<div class="space"></div>
-
-				<div class="row center-xs middle-xs reverse">
-					<div class="col-sm-5 col-video on-scroll">
-						<div class="intrinsic-container intrinsic-container-16x9">
-							<iframe src="https://www.youtube.com/embed/EBb4_KaaGAA?color=white&showinfo=0" frameborder="0" allowfullscreen></iframe>
-						</div>
-					</div>
-
-					<div class="col-sm-5 c-desc-right">
-						<h1>SNOW</h1>
-
-						<p>
-							<b>Running Time:</b> 3:24 <br />
-							<b>Resolution:</b> 1080p
-						</p>
-
-						<p class="light"><span class="regular italic">About:</span><br />
-							Trying out 240fps slow-motion video capabilities of the iPhone X, while capturing the magical snowfall in Ottawa.  Follow along for a trip from Shopify to Carleton U!
-						</p>
-					</div>
-				</div>
 
 				<div class="row center-xs middle-xs">
 					<div class="col-sm on-scroll">
