Front End > Web Experience

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ display: block;
 			</section>
 
 			<section class="dark-back" id="front-end">
-				<header class="white italic">Front End <span class="red">Design</span></header>
+				<header class="white italic">Web Experience <span class="red">Design</span></header>
 
 				<div class="space"></div>
 
