Add email address

--- a/index.html
+++ b/index.html
@@ -515,6 +515,18 @@ display: block;
 			</div>
 		</section>
 
+		<section class="dark-back" id="app-dev">
+			<header class="white italic">Contact</header>
+
+			<div class="row center-xs middle-xs">
+				<div class="col-sm on-scroll">
+					Want to get in touch? Send me an&nbsp;
+					<a data-scroll href="mailto:work@romsicki.com"><button id="dribbble-open"
+							class="ui-button pink-red">E-Mail</button></a>
+				</div>
+			</div>
+		</section>
+
 		<footer>
 			<p class="dim">Copyright &copy; 2019 Lukas Romsicki</p>
 		</footer>
